examples/test/testpolicy12593.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12593
  namespace: namespace407
spec:
  podSelector:
    matchLabels:
      key49: value13
      key11: value2
      key36: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value12
      podSelector:
        matchLabels:
          key15: value7
